# trino-minio-demo

./: Makefile  README.md  create.sql  docker-compose.yml  minio.s3cfg  pyproject.toml
data/starlink/: starlink.parquet
etc/catalog/: minio.properties
src/: main.py
